test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_operator_name_missing.sol
using {f as} for uint global;
// ----
// ParserError 4403: (11-12): Not a user-definable operator: }. Only the following operators can be user-defined: |, &, ^, ~, +, -, *, /, %, ==, !=, <, >, <=, >=
// ParserError 2314: (13-16): Expected '}' but got 'for'
